Bug 77104 - [ivb rcs flips 3.14] GPU sporadically hangs during normal desktop usage
Summary: [ivb rcs flips 3.14] GPU sporadically hangs during normal desktop usage
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: All Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
: 78120 78195 78243 78286 78445 78551 79296 79297 79390 79626 79705 79890 79954 80080 80746 80754 80802 81539 82129 82470 82601 82651 82729 82836 82839 82850 83056 83074 83343 83345 83528 83683 83812 84150 84433 84464 84520 84716 85069 86308 86892 88244 89618 91601 92539 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-04-06 12:08 UTC by Andreas Hermann
Modified: 2017-07-21 16:52 UTC (History)
48 users (show)

See Also:
i915 platform: ALL
i915 features:


Attachments
GPU Crash Dump (2.17 MB, text/plain)
2014-04-06 12:08 UTC, Andreas Hermann
no flags Details
Another crash dump (284.77 KB, application/octet-stream)
2014-05-05 11:06 UTC, fuujuhi
no flags Details
Ubuntu 14.04 GPU dump (2.00 MB, text/plain)
2014-05-11 08:21 UTC, Eren Inan Canpolat
no flags Details
GPU (Intel) crash dump (2.14 MB, application/octet-stream)
2014-05-20 09:29 UTC, misel.mesnjak
no flags Details
[PATCH] drm/i915: Don't use RCS flips on gen7+ when multiple pipes are enabled (2.60 KB, patch)
2014-05-27 10:29 UTC, Ville Syrjala
no flags Details | Splinter Review
i915-dont-use-rcs-on-gen7-for-3.14.patch (1.11 KB, patch)
2014-05-31 18:40 UTC, Vasily Khoruzhick
no flags Details | Splinter Review

Description Andreas Hermann 2014-04-06 12:08:11 UTC
Created attachment 96978 [details]
GPU Crash Dump

GPU sporadically hangs during normal desktop usage, but recovers and a crash dump is created (see attached file). I'm using kernel 3.14.0 on Gentoo Linux with KDE Desktop. In my xorg.conf I have the option 'TearFree' enabled and disabled any tearing prevention mechanisms in the window manager (KWin).
Comment 1 Chris Wilson 2014-04-06 19:16:22 UTC
It's the rcs flip dragon. This should be improved in recent kernels.
Comment 2 Chris Wilson 2014-04-30 16:19:29 UTC
*** Bug 78120 has been marked as a duplicate of this bug. ***
Comment 3 Chris Wilson 2014-05-02 15:54:40 UTC
*** Bug 78195 has been marked as a duplicate of this bug. ***
Comment 4 Chris Wilson 2014-05-04 07:03:20 UTC
*** Bug 78243 has been marked as a duplicate of this bug. ***
Comment 5 Bjoern C 2014-05-04 07:53:04 UTC
(In reply to comment #1)
> It's the rcs flip dragon. This should be improved in recent kernels.
And in which kernel should this be fixed so I can download that one? "rcs flip dragon" on google didnt result in any kernel change log hit...
Comment 6 Chris Wilson 2014-05-05 09:06:30 UTC
*** Bug 78286 has been marked as a duplicate of this bug. ***
Comment 7 fuujuhi 2014-05-05 11:06:48 UTC
Created attachment 98467 [details]
Another crash dump

Attaching my crash dump in case this is of interest.
(initially attached to https://bugs.freedesktop.org/show_bug.cgi?id=76956)

If this problem is fixed in recent kernels, it would be interesting to get a clear indication where (which package/version, at least which commit) it is fixed.

This way people at Canonical can back-port this fix to one of the LTS supported kernel. Same for other distros I guess.
Comment 8 Chris Wilson 2014-05-11 08:09:33 UTC
*** Bug 78551 has been marked as a duplicate of this bug. ***
Comment 9 Eren Inan Canpolat 2014-05-11 08:21:41 UTC
Created attachment 98837 [details]
Ubuntu 14.04 GPU dump

Seen on Ubuntu 14.04:

Linux moon 3.13.0-24-generic #47-Ubuntu SMP Fri May 2 23:30:00 UTC 2014 x86_64 x86_64 x86_64 GNU/Linux
Comment 10 Chris Wilson 2014-05-14 10:52:08 UTC
*** Bug 78445 has been marked as a duplicate of this bug. ***
Comment 11 misel.mesnjak 2014-05-20 09:29:15 UTC
Created attachment 99397 [details]
GPU (Intel) crash dump

Hi,

The same thing is happening to me, also. Ubuntu 14.04, uname -a output: 
Linux misel-pc 3.13.0-24-generic #47-Ubuntu SMP Fri May 2 23:30:00 UTC 2014 x86_64 x86_64 x86_64 GNU/Linux
Comment 12 Chris Wilson 2014-05-20 09:46:39 UTC
(In reply to comment #11)
> Created attachment 99397 [details]
> GPU (Intel) crash dump
> 
> Hi,
> 
> The same thing is happening to me, also. Ubuntu 14.04, uname -a output: 
> Linux misel-pc 3.13.0-24-generic #47-Ubuntu SMP Fri May 2 23:30:00 UTC 2014
> x86_64 x86_64 x86_64 GNU/Linux

No, it isn't. You want bug 54226.
Comment 13 Chris Wilson 2014-05-27 08:45:26 UTC
*** Bug 79296 has been marked as a duplicate of this bug. ***
Comment 14 Chris Wilson 2014-05-27 09:31:30 UTC
*** Bug 79297 has been marked as a duplicate of this bug. ***
Comment 15 Ville Syrjala 2014-05-27 10:29:45 UTC
Created attachment 99940 [details] [review]
[PATCH] drm/i915: Don't use RCS flips on gen7+ when multiple pipes are enabled

This patch might fix the problem. It simply goes back to using BCS for all flips when multiple pipes are active.
Comment 16 Chris Wilson 2014-05-29 05:18:18 UTC
*** Bug 79390 has been marked as a duplicate of this bug. ***
Comment 17 Vasily Khoruzhick 2014-05-30 21:41:46 UTC
Ville, could you backport the patch to 3.14?
Comment 18 Vasily Khoruzhick 2014-05-31 18:40:03 UTC
Created attachment 100213 [details] [review]
i915-dont-use-rcs-on-gen7-for-3.14.patch

Here's backport of Ville's patch for 3.14
Comment 19 Chris Wilson 2014-06-04 08:37:08 UTC
*** Bug 79626 has been marked as a duplicate of this bug. ***
Comment 20 Chris Wilson 2014-06-06 06:08:56 UTC
*** Bug 79705 has been marked as a duplicate of this bug. ***
Comment 21 Chris Wilson 2014-06-10 15:38:37 UTC
*** Bug 79890 has been marked as a duplicate of this bug. ***
Comment 22 Chris Wilson 2014-06-13 09:08:07 UTC
*** Bug 79954 has been marked as a duplicate of this bug. ***
Comment 23 Chris Wilson 2014-06-16 06:59:45 UTC
*** Bug 80080 has been marked as a duplicate of this bug. ***
Comment 24 Chris Wilson 2014-07-01 06:38:14 UTC
*** Bug 80746 has been marked as a duplicate of this bug. ***
Comment 25 Chris Wilson 2014-07-01 09:51:58 UTC
*** Bug 80754 has been marked as a duplicate of this bug. ***
Comment 26 Vasily Khoruzhick 2014-07-01 20:06:04 UTC
3.15.2 is also affected.
Comment 27 Chris Wilson 2014-07-02 11:12:44 UTC
*** Bug 80802 has been marked as a duplicate of this bug. ***
Comment 28 Chris Wilson 2014-07-19 10:42:25 UTC
commit 2a92d5bca1999b69c78f3c3e97b5484985b094b9
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Jul 8 10:40:29 2014 +0100

    drm/i915: Disable RCS flips on Ivybridge
    
    We currently see random GPU hangs when using RCS flips with multiple
    pipes on Ivybridge. Now that we have mmio flips, we can fairly cheaply
    fallback to using CPU driven flips instead.
    
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=77104
    Signed-off-by: Daniel Vetter <daniel.vetter@ffwll.ch>
Comment 29 Chris Wilson 2014-07-19 16:59:55 UTC
*** Bug 81539 has been marked as a duplicate of this bug. ***
Comment 30 Chris Wilson 2014-08-04 14:17:16 UTC
*** Bug 82129 has been marked as a duplicate of this bug. ***
Comment 31 Chris Wilson 2014-08-11 18:18:53 UTC
*** Bug 82470 has been marked as a duplicate of this bug. ***
Comment 32 Chris Wilson 2014-08-15 07:06:07 UTC
*** Bug 82651 has been marked as a duplicate of this bug. ***
Comment 33 Chris Wilson 2014-08-17 17:34:03 UTC
*** Bug 82729 has been marked as a duplicate of this bug. ***
Comment 34 Chris Wilson 2014-08-20 17:14:35 UTC
*** Bug 82836 has been marked as a duplicate of this bug. ***
Comment 35 Chris Wilson 2014-08-20 17:24:44 UTC
*** Bug 82839 has been marked as a duplicate of this bug. ***
Comment 36 Chris Wilson 2014-08-25 11:50:10 UTC
*** Bug 83056 has been marked as a duplicate of this bug. ***
Comment 37 Chris Wilson 2014-08-26 06:03:27 UTC
*** Bug 83074 has been marked as a duplicate of this bug. ***
Comment 38 Chris Wilson 2014-09-01 10:23:02 UTC
*** Bug 83343 has been marked as a duplicate of this bug. ***
Comment 39 Chris Wilson 2014-09-01 11:00:37 UTC
*** Bug 83345 has been marked as a duplicate of this bug. ***
Comment 40 Chris Wilson 2014-09-04 09:32:26 UTC
*** Bug 82601 has been marked as a duplicate of this bug. ***
Comment 41 Chris Wilson 2014-09-05 13:20:32 UTC
*** Bug 83528 has been marked as a duplicate of this bug. ***
Comment 42 Chris Wilson 2014-09-06 12:37:23 UTC
*** Bug 82850 has been marked as a duplicate of this bug. ***
Comment 43 Chris Wilson 2014-09-09 19:56:22 UTC
*** Bug 83683 has been marked as a duplicate of this bug. ***
Comment 44 Chris Wilson 2014-09-13 09:59:39 UTC
*** Bug 83812 has been marked as a duplicate of this bug. ***
Comment 45 Chris Wilson 2014-09-22 06:08:25 UTC
*** Bug 84150 has been marked as a duplicate of this bug. ***
Comment 46 Chris Wilson 2014-09-29 06:47:35 UTC
*** Bug 84433 has been marked as a duplicate of this bug. ***
Comment 47 Chris Wilson 2014-09-29 15:38:21 UTC
*** Bug 84464 has been marked as a duplicate of this bug. ***
Comment 48 Rodrigo Vivi 2014-09-30 20:02:16 UTC
*** Bug 84520 has been marked as a duplicate of this bug. ***
Comment 49 fuujuhi 2014-10-01 07:20:13 UTC
Hi,

Just got again the same bug report in dmesg, so for me the bug is NOT FIXED.
This is on Ubuntu 14.04.1 LTS.

Can someone here explain why this bug is marked FIXED, although there are still many reports showing it is not fixed?

If this because of Ubuntu not being up-to-date, could you give some info about which package must be updated, to what version, etc?
Comment 50 adrin 2014-10-01 07:37:26 UTC
Maybe it's fixed in upstream dev branch?

I have Archlinux and I get the same thing on a daily basis.
Comment 51 Vasily Khoruzhick 2014-10-01 07:51:08 UTC
(In reply to comment #50)
> Maybe it's fixed in upstream dev branch?
> 
> I have Archlinux and I get the same thing on a daily basis.

Vote for this task: https://bugs.archlinux.org/task/41979
Comment 52 Jani Nikula 2014-10-01 08:43:09 UTC
(In reply to comment #49)
> Just got again the same bug report in dmesg, so for me the bug is NOT FIXED.
> This is on Ubuntu 14.04.1 LTS.
> 
> Can someone here explain why this bug is marked FIXED, although there are
> still many reports showing it is not fixed?

This is an upstream drm/i915 bug tracker, and the bug is fixed upstream.

> If this because of Ubuntu not being up-to-date, could you give some info
> about which package must be updated, to what version, etc?

Please file bugs to your distros. Thanks.
Comment 53 Chris Wilson 2014-10-06 13:24:27 UTC
*** Bug 84716 has been marked as a duplicate of this bug. ***
Comment 54 Chris Wilson 2014-10-16 10:21:36 UTC
*** Bug 85069 has been marked as a duplicate of this bug. ***
Comment 55 fvisin 2014-10-23 07:58:45 UTC
I filed a bug report for Ubuntu:
https://bugs.launchpad.net/ubuntu/+source/linux/+bug/1384597
Comment 56 freeniki 2014-10-23 12:02:35 UTC
Upgrade kernel on 3.17 solve problem.
THX.
Comment 57 redwoz 2014-10-23 19:08:26 UTC
can confirm upgrade kernel 3.17 fixes this issue.
Comment 58 Milan Hodoscek 2014-10-23 19:49:05 UTC
(In reply to redwoz from comment #57)
> can confirm upgrade kernel 3.17 fixes this issue.

Not for me, though. I am running 3.17.1 + kde-5 and it complains when it starts

OTOH this might never get fixed since this[1] guy don't want to work on intel bugs anymore :-(

[1] http://mjg59.dreamwidth.org/32778.html
Comment 59 Jani Nikula 2014-10-24 06:55:53 UTC
(In reply to Milan Hodoscek from comment #58)
> OTOH this might never get fixed since this[1] guy don't want to work on
> intel bugs anymore :-(

All the credit to Matthew for everything he's done for Linux, but what you're saying is not just a little bit unfair in the drm/i915 context. He's got 10 commits in i915, last one from 2011. Not a single comment on i915 bugs in fdo bugzilla.
Comment 60 Chris Wilson 2014-11-15 09:47:40 UTC
*** Bug 86308 has been marked as a duplicate of this bug. ***
Comment 61 Chris Wilson 2014-12-01 07:39:31 UTC
*** Bug 86892 has been marked as a duplicate of this bug. ***
Comment 62 Sven 2015-01-03 20:52:48 UTC
I'm experiencing 2 to 3 hangs per week on Linux 3.18.1. That's pretty terrible if you ask me. Why is this bug marked as closed?
Comment 63 Chris Wilson 2015-01-09 17:07:09 UTC
*** Bug 88244 has been marked as a duplicate of this bug. ***
Comment 64 zamiere 2015-01-17 10:13:41 UTC
The(In reply to Sven from comment #62)
> I'm experiencing 2 to 3 hangs per week on Linux 3.18.1. That's pretty
> terrible if you ask me. Why is this bug marked as closed?

Same here on Arch with kernel 3.18.2
Where is the workaround/patch/anything?
Comment 65 Chris Wilson 2015-01-17 10:16:45 UTC
It is fixed. If you still have a bug, it is not this.
Comment 66 zamiere 2015-01-17 18:27:59 UTC
(In reply to Chris Wilson from comment #65)
> It is fixed. If you still have a bug, it is not this.

Indeed, the bug is fixed in rc2 of kernel 3.19!

I found it here:
https://wiki.archlinux.org/index.php/Intel_graphics#GPU_hangs_with_Haswell.27s_and_Ivy_Bridge.27s_HD_Graphics

Now the screen only flickering black but not freeze after installed kernel from http://kernel.ubuntu.com/~kernel-ppa/mainline/v3.19-rc4-vivid/

I hope it helps better others than "it is not this".
Comment 67 Chris Wilson 2015-01-17 20:32:35 UTC
(In reply to zamiere from comment #66)
> I hope it helps better others than "it is not this".

Because that is a different bug (bug 87759)... And had you opened a bug report and shown us the error state along with the usual log files I could have helped you.
Comment 68 zamiere 2015-01-17 20:40:02 UTC
(In reply to Chris Wilson from comment #67)
> (In reply to zamiere from comment #66)
> > I hope it helps better others than "it is not this".
> 
> Because that is a different bug (bug 87759)... And had you opened a bug
> report and shown us the error state along with the usual log files I could
> have helped you.

No. It was 83677. Nevermind. Intel driver is currently unusable slow and unstable, it was a waste of time.
Comment 69 Chris Wilson 2015-03-17 22:05:52 UTC
*** Bug 89618 has been marked as a duplicate of this bug. ***
Comment 70 Chris Wilson 2015-08-11 08:37:09 UTC
*** Bug 91601 has been marked as a duplicate of this bug. ***
Comment 71 Chris Wilson 2015-10-19 19:43:36 UTC
*** Bug 92539 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.